--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+/* https://css-tricks.com/perfect-full-page-background-image/ Provided some assistance
+Could not get backgound-image to work with cover once the doctype:html was set. */
 html { 
     background: url(images/background.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  }
+}
 
 body {
     color: seashell;
