even more spelling

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav .item:hover {
    font-size: 125px;
 }
 
-#routes-recieved {
+#routes-receiving {
     text-align: center;
     font-size: 35px;
 }
